--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
       name="description"
      
     />
-  </head>
-  <body>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+  <body class="mat-typography">
     <app-root class="appRoot"></app-root>
   </body>
 </html>
